2010-08-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (print_more): Return to normal and not
	to standard state after printing "---MORE---".

2010-08-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/i386/vga_common.c (grub_console_setcolorstate):
	Mask out the bit 0x80 since it has other meaning that specifiing color.

2010-08-29  Vladimir Serbinenko  <phcoder@gmail.com>

	New relocator. Allows for more kernel support and more straightforward
	loader writing.

	* Makefile.am (BOOTTARGET): New variable.
	(QEMU32): Likewise.
	(linux.init.x86_64): New target.
	(linux.init.i386): Likewise.
	(multiboot.elf): Likewise.
	(kfreebsd.elf): Likewise.
	(kfreebsd.aout): Likewise.
	(pc-chainloader.elf): Likewise.
	(pc-chainloader.bin): Likewise.
	(ntldr.elf): Likewise.
	(ntldr.bin): Likewise.
	(multiboot2.elf): Likewise.
	(kfreebsd.init.x86_64): Likewise.
	(kfreebsd.init.i386): Likewise.
	(knetbsd.init.i386): Likewise.
	(kopenbsd.init.i386): Likewise.
	(knetbsd.init.x86_64): Likewise.
	(kopenbsd.init.x86_64): Likewise.
	(linux-initramfs.i386): Likewise.
	(linux-initramfs.x86_64): Likewise.
	(kfreebsd-mfsroot.i386.img): Likewise.
	(knetbsd.image.i386): Likewise.
	(kopenbsd.image.i386): Likewise.
	(kopenbsd.image.x86_64): Likewise.
	(knetbsd.miniroot-image.i386.img): Likewise.
	(kfreebsd-mfsroot.x86_64.img): Likewise.
	(knetbsd.image.x86_64): Likewise.
	(knetbsd.miniroot-image.x86_64.img): Likewise.
	(kfreebsd-mfsroot.i386.gz): Likewise.
	(bootcheck-kfreebsd-i386): Likewise.
	(kfreebsd-mfsroot.x86_64.gz): Likewise.
	(bootcheck-kfreebsd-x86_64): Likewise.
	(knetbsd.miniroot-image.i386.gz): Likewise.
	(bootcheck-knetbsd-i386): Likewise.
	(bootcheck-kopenbsd-i386): Likewise.
	(bootcheck-kopenbsd-x86_64): Likewise.
	(knetbsd.miniroot-image.x86_64.gz): Likewise.
	(bootcheck-knetbsd-x86_64): Likewise.
	(bootcheck-linux-i386): Likewise.
	(bootcheck-linux-x86_64): Likewise.
	(bootcheck-linux16-i386): Likewise.